order css for the first article

--- a/css/article-1.css
+++ b/css/article-1.css
@@ -1,3 +1,4 @@
+/* Global styles */
 :root,
 :root.monokai {
     --background-color: #1e1f1c;
@@ -13,13 +14,14 @@
     --line-break: #88846f;
     --accent: #a6e22e;
     --accent-hover: #4e94ce;
-    --anchortag-orange-color: #fd971f;
     --color-focus: #75715e;
     --color-scrollbar-border: #7f7f7f4d;
     --color-scrollbar-thumb: #79797966;
     --color-scrollbar-thumb-hover: #646464b3;
     --color-scrollbar-thumb-active: #bfbfbf66;
     --color-scrollbar-shadow: #000000;
+    --text-selection-color: #878b9180;
+    --anchortag-orange-color: #fd971f;
     --color-blockquote: var(--line-break);
     --color-blockquote-symbol: var(--line-break);
     --code-background-color: #22231e;
@@ -29,7 +31,6 @@
     --code-punctuation: #ffffff;
     --code-string: #e6db74;
     --code-keyword: #f92672;
-    --text-selection-color: #878b9180;
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -49,13 +50,14 @@
     --line-break: #6a9955;
     --accent: #4ec9b0;
     --accent-hover: #4e94ce;
-    --anchortag-orange-color: #ce9178;
     --color-focus: #007fd4;
     --color-scrollbar-border: #7f7f7f4d;
     --color-scrollbar-thumb: #79797966;
     --color-scrollbar-thumb-hover: #646464b3;
     --color-scrollbar-thumb-active: #bfbfbf66;
     --color-scrollbar-shadow: #000000;
+    --text-selection-color: #264f78;
+    --anchortag-orange-color: #ce9178;
     --color-blockquote: var(--body-text);
     --color-blockquote-symbol: var(--line-break);
     --code-background-color: #1c1c1c;
@@ -65,7 +67,6 @@
     --code-punctuation: #d4d4d4;
     --code-string: #ce9178;
     --code-keyword: #569cd6;
-    --text-selection-color: #264f78;
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -84,13 +85,14 @@
     --line-break: #008000;
     --accent: #267f99;
     --accent-hover: #0000ff;
-    --anchortag-orange-color: #800000;
     --color-focus: #0090f1;
     --color-scrollbar-border: #7f7f7f4d;
     --color-scrollbar-thumb: #64646466;
     --color-scrollbar-thumb-hover: #646464b3;
     --color-scrollbar-thumb-active: #00000099;
     --color-scrollbar-shadow: #dddddd;
+    --text-selection-color: #add6ff;
+    --anchortag-orange-color: #800000;
     --color-blockquote: var(--body-text);
     --color-blockquote-symbol: #0451a5;
     --code-background-color: #fbfbfb;
@@ -100,7 +102,6 @@
     --code-punctuation: #000000;
     --code-string: #a31515;
     --code-keyword: #0000ff;
-    --text-selection-color: #add6ff;
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -119,13 +120,14 @@
     --line-break: #6a737d;
     --accent: #96d0ff;
     --accent-hover: #4e94ce;
-    --anchortag-orange-color: #9ecbff;
     --color-focus: #005cc5;
     --color-scrollbar-border: #1b1f23;
     --color-scrollbar-thumb: #6a737d33;
     --color-scrollbar-thumb-hover: #6a737d44;
     --color-scrollbar-thumb-active: #6a737d88;
     --color-scrollbar-shadow: #00000088;
+    --text-selection-color: #3392ff44;
+    --anchortag-orange-color: #9ecbff;
     --color-blockquote: #85e89d;
     --color-blockquote-symbol: var(--color-blockquote);
     --code-background-color: #202428;
@@ -135,7 +137,6 @@
     --code-punctuation: #e1e4e8;
     --code-string: #9ecbff;
     --code-keyword: #f97583;
-    --text-selection-color: #3392ff44;
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -155,13 +156,14 @@
     --line-break: #6a737d;
     --accent: #032f62;
     --accent-hover: #0000ff;
-    --anchortag-orange-color: #032f62;
     --color-focus: #2188ff;
     --color-scrollbar-border: #ffffff;
     --color-scrollbar-thumb: #959da533;
     --color-scrollbar-thumb-hover: #959da544;
     --color-scrollbar-thumb-active: #959da588;
     --color-scrollbar-shadow: #6a737d33;
+    --text-selection-color: #0366d625;
+    --anchortag-orange-color: #032f62;
     --color-blockquote: #22863a;
     --color-blockquote-symbol: var(--color-blockquote);
     --code-background-color: #fcfcfc;
@@ -171,7 +173,6 @@
     --code-punctuation: var(--body-text);
     --code-string: #032f62;
     --code-keyword: #d73a49;
-    --text-selection-color: #0366d625;
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -191,13 +192,14 @@
     --line-break: #93a1a1;
     --accent: #268bd2;
     --accent-hover: #0000ff;
-    --anchortag-orange-color: #2aa198;
     --color-focus: #d3af86;
     --color-scrollbar-border: #7f7f7f4d;
     --color-scrollbar-thumb: #64646466;
     --color-scrollbar-thumb-hover: #646464b3;
     --color-scrollbar-thumb-active: #00000099;
     --color-scrollbar-shadow: #dddddd;
+    --text-selection-color: #eee8d5;
+    --anchortag-orange-color: #2aa198;
     --color-blockquote: #859900;
     --color-blockquote-symbol: var(--color-blockquote);
     --code-background-color: #f9f1dc;
@@ -207,7 +209,6 @@
     --code-punctuation: #333333;
     --code-string: #2aa198;
     --code-keyword: #268bd2;
-    --text-selection-color: #eee8d5;
     --font-sans: -apple-system, BlinkMacSystemFont, Segoe WPC, Segoe UI,
         system-ui, Ubuntu, sans-serif;
     --font-mono: Fira Code, monospace;
@@ -215,8 +216,8 @@
 
 * {
     margin: 0;
-    padding: 0;
     box-sizing: border-box;
+    padding: 0;
 }
 
 *::-webkit-scrollbar-corner,
@@ -239,11 +240,10 @@
 }
 
 body {
-    box-sizing: border-box;
+    margin: 0;
     background-color: var(--background-color);
     color: var(--body-text);
     font-family: "Fira code", monospace;
-    margin: 0;
     line-height: 24px;
 }
 body::-webkit-scrollbar {
@@ -252,15 +252,23 @@ body::-webkit-scrollbar {
 }
 
 .container {
-    max-width: 81ch;
     margin: 4.5rem auto;
+    max-width: 81ch;
 }
 
-/* Navbar */
+/* Header/Navbar */
+nav {
+    overflow-x: auto;
+}
+
 .nav-list {
     display: flex;
     margin: 0 auto;
     padding-left: 0;
+}
+
+.nav-item {
+    list-style: none;
 }
 
 .nav-item:nth-of-type(3) {
@@ -273,30 +281,22 @@ body::-webkit-scrollbar {
     background-color: var(--inactive-navbar-background);
 }
 
-.nav-item {
-    list-style: none;
-}
-
 .nav-item a {
-    text-decoration: none;
-    color: var(--body-text);
     padding-bottom: 0;
+    color: var(--body-text);
     font-size: 13px;
+    text-decoration: none;
 }
 
 .nav-link {
-    font-family: var(--font-sans);
-    font-size: 0.8rem;
     color: var(--navbar-text);
+    font-size: 0.8rem;
+    font-family: var(--font-sans);
 }
 
 .nav-link div {
-    width: 7.5rem;
     padding: 0.3rem 0 0.3rem 0.5rem;
-}
-
-nav {
-    overflow-x: auto;
+    width: 7.5rem;
 }
 
 .article-tab {
@@ -305,11 +305,11 @@ nav {
 }
 
 .article-tab a {
+    vertical-align: middle;
     margin-left: 0.2rem;
     padding: 0.2rem 0.2rem 0;
     color: var(--navbar-text);
     font-weight: normal;
-    vertical-align: middle;
     text-decoration: none;
 }
 
@@ -322,33 +322,32 @@ nav {
     color: var(--active-navbar-text);
 }
 
-/* Content */
-.content {
-    padding-top: -3px;
-}
-
+/* Main */
 .main-content {
     padding: 0 65px;
     background-color: var(--editor-background);
 }
 
-/* Editor */
-
 .editor {
-    text-align: left;
-    color: var(--body-text);
     max-width: 81ch;
     padding-bottom: 5rem;
+    color: var(--body-text);
+    text-align: left;
 }
-/* Header */
+
+.article1-header {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 30px;
+}
 
 h1 {
     margin-top: 0;
     margin-bottom: 0;
-    font-size: 20px;
-    color: var(--body-text);
-    font-weight: 700px;
     padding-top: 25px;
+    color: var(--body-text);
+    font-size: 20px;
+    font-weight: 700px;
 }
 
 header p {
@@ -357,115 +356,25 @@ header p {
     color: var(--secondary-text);
 }
 
-h3 {
-    font-weight: 700;
-    font-size: 18px;
-    margin-bottom: 0;
-}
-
-.editor p {
-    padding-bottom: 1.5rem;
-}
-
-.article p {
-    line-height: 24px;
-    font-size: 16px;
-}
-
-.paragraph-padding {
-    padding-top: 1.5rem;
-}
-
-pre {
-    margin-bottom: 1.5rem;
-}
-
-header {
-    margin-left: 30px;
-}
-
-hr {
-    border: none;
-    margin: 1.5rem 0;
-    overflow: hidden;
-    white-space: nowrap;
-    color: rgb(136, 132, 111);
-}
-
-hr::after {
-    content: "//  ---------------------------------------------------------------------------------------------";
-    font-variant-ligatures: none;
-    color: var(--line-break);
-}
-
-/* Footer */
-footer {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-footer ul {
-    display: flex;
-    list-style: none;
-    padding-left: 0;
-    margin-bottom: 8px;
-    margin-top: 5px;
-}
-
-footer ul a {
-    color: var(--accent);
-    text-decoration: underline;
-    text-underline-position: under;
-    font-size: 16px;
-}
-
-footer ul span {
-    padding-right: 0.5rem;
+.time-nolines {
+    padding-top: 30px;
     color: var(--secondary-text);
-}
-
-footer ul a:hover {
-    color: var(--accent-hover);
-}
-
-.arrow {
-    color: var(--accent);
-}
-
-/* article1.html */
-.article1-x {
-    background-color: rgb(39, 40, 34);
-    padding: 9px 12px 9px 9px;
-    color: rgb(255, 255, 255);
-    font-style: italic;
-}
-
-.article1-blog {
-    background-color: rgb(52, 53, 47);
-    padding: 9px 78px 9px 12px;
-}
-
-.article1-header {
-    display: flex;
-    justify-content: space-between;
+    font-size: 13px;
+    line-height: 1.5;
+    white-space: nowrap;
 }
 
 .article1-img {
-    width: 601px;
-    cursor: zoom-in;
     display: block;
-    max-width: 100%;
+    cursor: zoom-in;
     margin-bottom: 1rem;
+    max-width: 100%;
+    width: 601px;
 }
 
-.time-nolines {
-    padding-top: 30px;
-    font-size: 13px;
-    color: var(--secondary-text);
-    line-height: 1.5;
-    white-space: nowrap;
+.main-article h2 {
+    padding-top: 1.5rem;
+    font-size: 22px;
 }
 
 .green-link {
@@ -478,32 +387,52 @@ footer ul a:hover {
     color: var(--accent-hover);
 }
 
-.main-article h2 {
+.text-1-content {
+    display: flex;
+    overflow: hidden;
+    color: var(--article3-gray-text);
+}
+
+.editor p {
+    padding-bottom: 1.5rem;
+}
+
+.text-1-content::before {
+    content: "> > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > >";
+    margin-right: 2ch;
+    width: 1ch;
+    height: 0.5rem;
+    color: var(--color-blockquote-symbol);
+}
+
+.text-3-content p {
+    margin: 0;
+    padding-bottom: 0;
+    color: var(--color-blockquote);
+}
+
+.paragraph-no-padding {
+    padding-bottom: 0;
+}
+
+.paragraph-padding {
     padding-top: 1.5rem;
-    font-size: 22px;
 }
 
-blockquote {
-    margin-left: 0;
-}
-
-.hr-color {
-    color: var(--line-break);
-}
-
-.comment {
-    color: var(--line-break);
-}
-
-pre {
-    display: block;
-}
 .codes {
+    display: block;
+    margin: 0 -65px 1.5rem -65px;
     background-color: var(--code-background-color);
     color: var(--code-color);
-    margin-left: -65px;
-    margin-right: -65px;
     line-height: 1.5rem;
+}
+
+.scroll-bar {
+    overflow: hidden;
+}
+
+.scroll-bar::-webkit-scrollbar {
+    display: none;
 }
 
 code {
@@ -521,116 +450,113 @@ code {
     color: var(--accent);
 }
 
-.code-constant {
-    color: var(--code-constant);
+hr {
+    overflow: hidden;
+    margin: 1.5rem 0;
+    border: none;
+    white-space: nowrap;
 }
 
-.code-punctuation {
-    color: var(--code-punctuation);
-}
-
-.code-function {
-    color: var(--code-function-color);
-}
-
-.operator {
-    color: var(--code-keyword);
-}
-
-.string {
-    color: var(--code-string);
-}
-
-.keyword {
-    color: var(--code-keyword);
-}
-
-.code-comment {
+hr::after {
+    content: "//  ---------------------------------------------------------------------------------------------";
     color: var(--line-break);
+    font-variant-ligatures: none;
 }
 
-.space-before {
-    padding-left: 68px;
-}
-
-.code-div {
-    margin: 0;
-}
-
-.blue-text {
-    color: rgb(86, 156, 214);
-}
-
-.yellow-text {
-    color: rgb(220, 220, 170);
+.scroll-bar-2 {
+    height: 7.5rem;
 }
 
 .red-text {
     color: var(--anchortag-orange-color);
 }
 
-.green-text {
-    color: rgb(181, 206, 168);
-}
-
-.reduce {
-    text-decoration-color: rgb(166, 226, 46);
-    color: var(--anchortag-orange-color);
-    text-underline-position: under;
-}
-
-.reduce:hover {
-    text-decoration-color: #4e94ce;
-}
-
-.text-7 {
-    color: rgb(212, 212, 212);
-    white-space: nowrap;
-}
-
-.scroll-bar {
-    overflow: hidden;
-}
-
-/* .scroll-bar-1 {
-    height: 10.5rem;
-} */
-.scroll-bar-2 {
-    height: 7.5rem;
-}
-.scroll-bar::-webkit-scrollbar {
-    display: none;
-}
-
 .scroll-bar-3 {
     height: 9rem;
 }
 
-.text-1-content::before {
-    content: "> > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > >";
-    width: 1ch;
-    height: 0.5rem;
-    margin-right: 2ch;
-    color: var(--color-blockquote-symbol);
+.keyword {
+    color: var(--code-keyword);
 }
 
-.text-3-content p {
-    padding-bottom: 0;
-    margin: 0;
-    color: var(--color-blockquote);
+.code-punctuation {
+    color: var(--code-punctuation);
 }
 
-.text-1-content {
-    display: flex;
-    overflow: hidden;
-    color: var(--article3-gray-text);
+.operator {
+    color: var(--code-keyword);
+}
+
+.code-function {
+    color: var(--code-function-color);
 }
 
 .code-constant {
     color: var(--code-constant);
 }
 
-/* Themes */
+.code-comment {
+    color: var(--line-break);
+}
+
+.reduce {
+    border-bottom: 1px solid var(--accent);
+    color: var(--anchortag-orange-color);
+    text-decoration: none;
+}
+
+.reduce:hover {
+    border-bottom: 1px solid var(--accent-hover);
+}
+
+.string {
+    color: var(--code-string);
+}
+
+.last-paragraph {
+    padding-bottom: 0 !important;
+}
+
+/* Footer */
+footer {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+footer ul {
+    display: flex;
+    list-style: none;
+    margin-bottom: 8px;
+    margin-top: 5px;
+    padding-left: 0;
+}
+
+footer ul a {
+    color: var(--accent);
+    font-size: 16px;
+    text-decoration: underline;
+    text-underline-position: under;
+}
+
+footer ul span {
+    padding-right: 0.5rem;
+    color: var(--secondary-text);
+}
+
+footer ul a:hover {
+    color: var(--accent-hover);
+}
+
+.arrow {
+    color: var(--accent);
+}
+
+.space-before {
+    padding-left: 68px;
+}
+
 .color-theme-name {
     cursor: pointer;
 }
@@ -646,14 +572,14 @@ code {
 
 .theme-picker {
     position: absolute;
-    right: 2rem;
     top: 8px;
+    right: 2rem;
     background: none;
     opacity: 0;
-    border: none;
-    color: var(--body-text);
     -webkit-appearance: none;
     margin-right: -70px;
+    border: none;
+    color: var(--body-text);
     font-size: 16px;
     font-weight: 500;
     font-family: "Fira code", monospace;
@@ -672,14 +598,14 @@ code {
 .lines {
     position: absolute;
     top: 8.1rem;
-    text-align: right;
     padding: 0 1.5rem;
     color: var(--editor-line-number);
+    text-align: right;
 }
 
 .lines-1:hover {
-    color: var(--editor-line-number-hover);
     cursor: pointer;
+    color: var(--editor-line-number-hover);
 }
 
 .lines-1:active,
@@ -697,118 +623,6 @@ code {
         margin: 0;
     }
 
-    .editor {
-        max-width: 44ch;
-        padding-left: 0.3rem;
-    }
-
-    .blog-header {
-        padding-bottom: 25px;
-    }
-    .article {
-        display: block;
-    }
-    .article-div {
-        padding-bottom: 10px;
-    }
-    .article img {
-        width: 298.667px;
-        height: 168px;
-        margin: -10px 0 20px 0;
-        object-fit: contain;
-        max-width: 100%;
-    }
-    .article-div p {
-        font-size: 14.5px;
-    }
-    header {
-        margin-left: 0;
-    }
-    .main-content {
-        padding: 0 45px;
-        line-height: 20px;
-    }
-    .content {
-        padding-top: 0;
-    }
-    ul {
-        margin: 0;
-    }
-
-    h1,
-    .main-article h2 {
-        font-size: 17.5px;
-    }
-    h3 {
-        font-size: 16px;
-    }
-    header p {
-        font-size: 15px;
-    }
-    .time {
-        padding: 0;
-    }
-    hr {
-        margin-top: 0;
-    }
-    .codes {
-        margin-right: -28px;
-    }
-    footer {
-        display: block;
-    }
-    footer ul {
-        display: block;
-        padding-bottom: 7px;
-    }
-    footer li {
-        line-height: 21px;
-    }
-    footer ul a {
-        letter-spacing: none;
-        font-size: 14px;
-    }
-    .dot {
-        display: none;
-    }
-    .color-theme-name {
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 500;
-    }
-    .theme-picker {
-        width: 9rem;
-        left: 0;
-        top: 6.5rem;
-    }
-    .main-article {
-        font-size: 14px;
-    }
-    .article1-header {
-        display: block;
-    }
-    .line {
-        display: none;
-    }
-    .time-nolines {
-        padding-top: 0;
-    }
-    header p {
-        margin-bottom: 0;
-    }
-    .article1-header {
-        padding-bottom: 20px;
-    }
-    .article1-img {
-        width: 85%;
-    }
-    .codes {
-        margin-left: -45px;
-    }
-    code {
-        position: relative;
-        left: -20px;
-    }
     nav {
         overflow: auto;
     }
@@ -829,13 +643,98 @@ code {
         min-width: 0;
     }
 
+    .main-content {
+        padding: 0 45px;
+        line-height: 20px;
+    }
+
+    .main-article {
+        font-size: 14px;
+    }
+
+    .editor {
+        max-width: 44ch;
+        padding-left: 0.3rem;
+    }
+
+    .article1-header {
+        display: block;
+        margin-left: 0;
+        padding-bottom: 1.5rem;
+    }
+
+    .article1-header p {
+        margin-bottom: 0;
+        padding-bottom: 0;
+        font-size: 15px;
+    }
+
+    .time-nolines {
+        padding-top: 0;
+    }
+
+    .line {
+        display: none;
+    }
+
+    .article img {
+        object-fit: contain;
+        margin: -10px 0 20px 0;
+        width: 18.6rem;
+        max-width: 100%;
+        height: 10.5rem;
+    }
+
+    h1,
+    .main-article h2 {
+        font-size: 17.5px;
+    }
+
+    hr {
+        margin-top: 0;
+    }
+    .codes {
+        margin-left: -45px;
+        margin-right: -28px;
+    }
+
+    code {
+        position: relative;
+        left: -20px;
+    }
+
+    footer {
+        display: block;
+    }
+    footer ul {
+        display: block;
+        padding-bottom: 7px;
+    }
+    footer li {
+        line-height: 21px;
+    }
+    footer ul a {
+        font-size: 14px;
+        letter-spacing: none;
+    }
+    .dot {
+        display: none;
+    }
+    .color-theme-name {
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+    }
+    .theme-picker {
+        left: 0;
+        top: 6.5rem;
+        width: 9rem;
+    }
+
     .lines {
         top: 3.7rem;
-        text-align: right;
         padding-right: 0.2rem;
         padding-left: 0.9rem;
+        text-align: right;
     }
-}
-
-@media only screen and (max-width: 425px) {
 }
